# langchain-course

./: .gitignore  main.py  pyproject.toml
ReAct-Prompt/: 3_raw_react_prompt.py
agents-under-the-hood/: .env.example  1_agent_loop_langchain_tool_calling.py  2_agent_loop_langchain_tool_calling.py  pyproject.toml
rag-gist/: ingestion.py  main.py  pyproject.toml
search-agent/: main.py  pyproject.toml
